@@ -65,6 +65,9 @@
     <li><span class="label label-success">Feature</span> Support to select region (eu, us, asia) for new buckets (Google
         Storage)
     </li>
+    <li><span class="label label-success">Feature</span> Support to set lifecycle configuration on bucket (Google
+        Storage)
+    </li>
     <li><span class="label label-warning">Bugfix</span> Number of buckets displayed in browser limited to 1000 (Google
         Storage)
     </li>
