@@ -4,6 +4,8 @@ https://cyberduck.io/
 7.1.0
 - [Feature] Support for storage classes (Google Storage)
 - [Feature] Support to select region (eu, us, asia) for new buckets (Google Storage)
+- [Feature] Support to set lifecycle configuration on bucket (Google Storage)
+- [Feature] Support for Transport Layer Security (TLS) 1.3
 - [Bugfix] Number of buckets displayed in browser limited to 1000 (Google Storage)
 
 7.0.2
